stateDiagram-v2
    [*] --> Aberto
    Aberto --> RecebendoCandidatos: currículos/vínculos
    RecebendoCandidatos --> Triagem: analisar CV
    Triagem --> Entrevista: qualificado/agendado
    Triagem --> BancoTalentos: não usado agora
    Triagem --> Eliminado: reprovado
    Entrevista --> Aprovado: decisão positiva
    Entrevista --> Eliminado: decisão negativa
    Entrevista --> BancoTalentos: reaproveitar futuro
    Aprovado --> Encerrado: vagas preenchidas/fechamento
    Eliminado --> Encerrado: processo fechado
    BancoTalentos --> Encerrado: processo fechado
    Aberto --> Encerrado: encerramento manual
    Encerrado --> [*]
